--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "cra-template": "1.2.0",
     "js-cookie": "^3.0.5",
     "react": "^19.0.0",
+    "react-cookie": "^7.2.2",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
     "sass": "^1.83.0",
     "typescript": "^4.9.5"
